guardado 3 tengo sueño

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Encabezado con logo de la tienda y los difeentes campos-->
     <header class="bg-dark py-3">
         <div class="container d-flex justify-content-between align-items-center">
-            <a href="#" class="text-decoration-none text-light d-flex align-items-center">
+            <a href="/index.html" class="text-decoration-none text-light d-flex align-items-center">
                 <img src="images/logo.png" alt="Logo de la tienda" class="Logo me-2">
             </a>
             <nav>
@@ -31,30 +31,32 @@
     </header>  
     <!--Seccion de la pagina de inicio con imagenes de las prendas y sus respectivos enlaces-->
     <main class="py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 mb-3">
-                    <a href="html/remeras.html">
-                        <img src="images/reme1.png" alt="Remera negra rosa tussy" class="img-fluid">
-                    </a>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <a href="html/pantalones.html">
-                        <img src="images/pant1.jpg" alt="Pantalon Baggy DCwash" class="img-fluid">
-                    </a>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <a href="html/hoodies.html">
-                        <img src="images/hood1.jpg" alt="Hoodie cream" class="img-fluid">
-                    </a>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <a href="html/calzados.html">
-                        <img src="images/DCW.jpg" alt="DC X Black sabbhath" class="img-fluid">
-                    </a>
+        <section> 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 mb-3">
+                        <a href="html/remeras.html">
+                            <img src="images/reme1.png" alt="Remera negra rosa tussy" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <a href="html/pantalones.html">
+                            <img src="images/pant1.jpg" alt="Pantalon Baggy DCwash" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <a href="html/hoodies.html">
+                            <img src="images/hood1.jpg" alt="Hoodie cream" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <a href="html/calzados.html">
+                            <img src="images/DCW.jpg" alt="DC X Black sabbhath" class="img-fluid">
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <!--Pie de pagina con las redes sociales de la tienda y los enlaces al menu de "Nosotros" y "contacto", proximamente se agregaran mas campos-->
     <footer> 
@@ -78,7 +80,6 @@
                                 <img src="images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
                         </a>
                     </div>
-                </section>
                         
                 <div class="contenedor">
                     <div class="contenidos">
