--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -7,9 +7,73 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Sucursales</title>
 </head>
 <body>
-    
+    <header class="bg-dark py-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <a href="/index.html" class="text-decoration-none text-light d-flex align-items-center">
+                <img src="../images/logo.png" alt="Logo de la tienda" class="Logo me-2">
+            </a>
+            <nav>
+                <ul class="list-unstyled d-flex m-0">
+                    <li><a href="../index.html" class="text-light text-decoration-none">Inicio</a></li>
+                    <li><a href="/html/pantalones.html" class="text-light text-decoration-none">Pantalones</a></li>
+                    <li><a href="/html/hoodies.html" class="text-light text-decoration-none">Hoodies</a></li>
+                    <li><a href="/html/calzados.html" class="text-light text-decoration-none">Calzados</a></li>
+                    <li> <input type="text" placeholder="Buscar" class="input" class="text-light text-decoration-none"> </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+<main>
+    <section>
+        <h2 class="section_h2">En proceso...</h2>
+    </section>
+</main>
+
+<footer>
+    <div class="container text-center">
+        <div class="row" > 
+            <div class="col"> 
+                <h2>NUESTRAS REDES</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 mb-3">
+                <a href="https://www.instagram.com/rosse.in/"target="_blank">
+                    <img src="../images/ig.png" alt="Pagina de instagram" class="logo_ig">
+                </a>
+            </div>
+            <div class="col-md-4 mb-3">
+                <a href="https://www.facebook.com/profile.php?id=61557798010156"target="_blank">
+                    <img src="../images/face.png" alt="Pagina de Facebook" class="logo_face">
+                </a>  
+            </div>
+            <div class="col-md-4 mb-3"> 
+                <a href="https://www.tiktok.com/es" target="_blank">
+                    <img src="/images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
+                </a>
+            </div>
+            <div class="row">
+                <div class="col"> 
+                    <h2>ASISTENCIA</h2> 
+                </div>  
+            </div>
+            <div class="row"> 
+                <div class="col">
+                    <a href="contacto.html" >Contacto</a>
+                </div>
+            </div>
+            <div class="row"> 
+                <div class="col">
+                    <a href="nosotros.html">Nosotros</a>
+                </div>
+            </div>
+        </div>
+    </div>      
+</footer>
 </body>
 </html>
