--- a/html/pantalones.html
+++ b/html/pantalones.html
@@ -33,7 +33,7 @@
             <div class="container text-center">
                 <div class="row" > 
                     <div class="col"> 
-                        <h2 class="section_h2">Pantalones</h2>
+                        <h2 class="section_h2">PANTALONES</h2>
                     </div>
                 </div>
                 <div class="row">
