--- a/html/contacto.html
+++ b/html/contacto.html
@@ -13,15 +13,15 @@
 <body>
     <header class="bg-dark py-3">
         <div class="container d-flex justify-content-between align-items-center">
-            <a href="/index.html" class="text-decoration-none text-light d-flex align-items-center">
+            <a href="../index.html" class="text-decoration-none text-light d-flex align-items-center">
                 <img src="../images/logo.png" alt="Logo de la tienda" class="Logo me-2">
             </a>
             <nav>
                 <ul class="list-unstyled d-flex m-0">
                     <li><a href="../index.html" class="text-light text-decoration-none">Inicio</a></li>
-                    <li><a href="/html/remeras.html" class="text-light text-decoration-none">Remeras</a></li>
-                    <li><a href="/html/hoodies.html" class="text-light text-decoration-none">Hoodies</a></li>
-                    <li><a href="/html/calzados.html" class="text-light text-decoration-none">Calzados</a></li>
+                    <li><a href="remeras.html" class="text-light text-decoration-none">Remeras</a></li>
+                    <li><a href="hoodies.html" class="text-light text-decoration-none">Hoodies</a></li>
+                    <li><a href="calzados.html" class="text-light text-decoration-none">Calzados</a></li>
                     <li> <input type="text" placeholder="Buscar" class="input" class="text-light text-decoration-none"> </li>
                 </ul>
             </nav>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-4 mb-3"> 
                     <a href="https://www.tiktok.com/es" target="_blank">
-                        <img src="/images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
+                        <img src="../images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
                     </a>
                 </div>
                 <div class="row">
