arreglo footer y sombras

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon"  href="../images/logo.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
     <title>Nosotros</title>
     <link rel="stylesheet" href="../css/style.css">
@@ -46,44 +47,76 @@
 
     <footer>
         <div class="container text-center">
-            <div class="row" > 
-                <div class="col"> 
-                    <h2>NUESTRAS REDES</h2>
-                </div>
+          <div class="row" > 
+            <div class="col"> 
+            <h2>🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸</h2>
             </div>
+          </div>
             <div class="row">
-                <div class="col-md-4 mb-3">
-                    <a href="https://www.instagram.com/rosse.in/"target="_blank">
-                        <img src="../images/ig.png" alt="Pagina de instagram" class="logo_ig">
-                    </a>
+                <div class="col-md-1 mb-2">
+                  <a href="https://www.instagram.com/rosse.in/"target="_blank">
+                    <img src="../images/ig.png" alt="Pagina de instagram" class="logo_ig">
+                  </a>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <a href="https://www.facebook.com/profile.php?id=61557798010156"target="_blank">
-                        <img src="../images/face.png" alt="Pagina de Facebook" class="logo_face">
-                    </a>  
+                <div class="col-md-1 mb-2">
+                  <a href="https://www.facebook.com/profile.php?id=61557798010156"target="_blank">
+                    <img src="../images/face.png" alt="Pagina de Facebook" class="logo_face">
+                  </a>  
                 </div>
-                <div class="col-md-4 mb-3"> 
-                    <a href="https://www.tiktok.com/es" target="_blank">
-                        <img src="../images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
-                    </a>
+                <div class="col-md-1 mb-2"> 
+                  <a href="https://www.tiktok.com/es" target="_blank">
+                    <img src="../images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
+                  </a>
                 </div>
+                <div class="col-md-6 mb-2"> 
+                    <img src="../images/circulito.png" alt="Pagina de Tiktok" class="circulo">
+                </div>
+                <div class="col-md-2 mb-2"> 
+                  <img src="../images/flores.png" alt="Pagina de Tiktok" class="circulo">
+              </div>
                 <div class="row">
-                    <div class="col"> 
-                        <h2>ASISTENCIA</h2> 
-                    </div>  
-                </div>
-                <div class="row"> 
-                    <div class="col">
-                        <a href="contacto.html" >Contacto</a>
-                    </div>
-                </div>
-                <div class="row"> 
-                    <div class="col">
-                        <a href="nosotros.html">Nosotros</a>
-                    </div>
-                </div>
+                  <div class="col-md-4 mb-3"> 
+                    <h2>ASISTENCIA</h2>
+                      <div class="col"> 
+                        <a href="devoluciones.html" >DEVOLUCIONES</a> 
+                      </div>
+                      <div class="col"> 
+                        <a href="dudas.html" >DUDAS</a> 
+                      </div>
+                      <div class="col">
+                        <a href="contacto.html">CONTACTO</a>
+                      </div>
+                  </div> 
+                  <div class="col-md-4 mb-3"> 
+                    <h2>ACERCA DE NOSOTROS</h2> 
+                      <div class="col"> 
+                        <a href="sucursales.html" >SUCURSALES</a> 
+                      </div>
+                      <div class="col"> 
+                        <a href="nosotros.html" >NOSOTROS</a> 
+                      </div>
+                      <div class="col">
+                        <span class="spanf">© 2024 Rosse Argentina</span>
+                      </div>
+                  </div>  
+                  <div class="col-md-4 mb-3"> 
+                    <h2>PRODUCTOS</h2>
+                      <div class="col"> 
+                        <a href="remeras.html" >REMERAS</a> 
+                      </div>
+                      <div class="col"> 
+                        <a href="pantalones.html" >PANTALONES</a> 
+                      </div>
+                      <div class="col">
+                        <a href="hoodies.html">HOODIES</a>
+                      </div>
+                      <div class="col">
+                        <a href="calzados.html">CALZADOS</a>
+                      </div>
+                  </div>   
+                </div>          
             </div>
         </div>      
-    </footer>
+      </footer>
 </body>
 </html>
