--- a/html/remeras.html
+++ b/html/remeras.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon"  href="../images/logo.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
     <title>Remeras</title>
     <link rel="stylesheet" href="../css/style.css">
@@ -28,71 +29,138 @@
     </div>
 </header>  
 
-    <main class="py-5">
-      <section> 
-        <div class="container text-center">
-          <div class="row" > 
-            <div class="col"> 
-            <h2 class="section_h2">REMERAS</h2>
+<main class="py-5">
+  <section>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <h2 class="section_h2">REMERAS</h2>
+        </div>
+      </div>
+      <div class="row">
+        <!-- Remera 1 -->
+        <div class="col-md-3 col-sm-6 mb-3 d-flex">
+          <div class="card text-bg-dark w-100 section-card">
+            <div class="image-container">
+              <img src="../images/reme1.png" class="card-img-top" alt="Remera negra tussy">
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Remera negra tussy <span class="badge text-bg-success">Disponible</span></h5>
+              <a href="remeras.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
             </div>
           </div>
-            <div class="row">
-                <div class="col-md-3 mb-3">
-                  <img src="../images/reme1.png" alt="Remera rosa tussy">
-                </div>
-                <div class="col-md-3 mb-3">
-                  <img src="../images/reme3.jpg" alt="">   
-                </div>
-                <div class="col-md-3 mb-3">
-                  <img src="../images/reme2.png" alt="Remera oversize bordo">
-                </div>
-                <div class="col-md-3 mb-3">
-                  <img src="../images/remera zeus.jpg" alt="Remera oversize zeus">
-                </div>
-            </div>
         </div>
-      </section>
-  </main>
+        <!-- Remera 2 -->
+        <div class="col-md-3 col-sm-6 mb-3 d-flex">
+          <div class="card text-bg-dark w-100 section-card">
+            <div class="image-container">
+              <img src="../images/reme3.jpg" class="card-img-top" alt="Remerita">
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Remera oversize rich - Shato <span class="badge text-bg-success">Disponible</span></h5>
+              <a href="remeras.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <!-- Remera 3 -->
+        <div class="col-md-3 col-sm-6 mb-3 d-flex">
+          <div class="card text-bg-dark w-100 section-card">
+            <div class="image-container">
+              <img src="../images/reme2.png" class="card-img-top" alt="Remerita">
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Remera oversize bordo <span class="badge text-bg-success">Disponible</span></h5>
+              <a href="remeras.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <!-- Remera 4 -->
+        <div class="col-md-3 col-sm-6 mb-3 d-flex">
+          <div class="card text-bg-dark w-100 section-card">
+            <div class="image-container">
+              <img src="../images/remera zeus.jpg" class="card-img-top" alt="Remerita">
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Remera oversize zeus <span class="badge text-bg-success">Disponible</span></h5>
+              <a href="remeras.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
 
     <footer>
       <div class="container text-center">
         <div class="row" > 
           <div class="col"> 
-          <h2>NUESTRAS REDES</h2>
+          <h2>🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸</h2>
           </div>
         </div>
           <div class="row">
-              <div class="col-md-4 mb-3">
+              <div class="col-md-1 mb-2">
                 <a href="https://www.instagram.com/rosse.in/"target="_blank">
                   <img src="../images/ig.png" alt="Pagina de instagram" class="logo_ig">
                 </a>
               </div>
-              <div class="col-md-4 mb-3">
+              <div class="col-md-1 mb-2">
                 <a href="https://www.facebook.com/profile.php?id=61557798010156"target="_blank">
                   <img src="../images/face.png" alt="Pagina de Facebook" class="logo_face">
                 </a>  
               </div>
-              <div class="col-md-4 mb-3"> 
+              <div class="col-md-1 mb-2"> 
                 <a href="https://www.tiktok.com/es" target="_blank">
                   <img src="../images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
                 </a>
               </div>
+              <div class="col-md-6 mb-2"> 
+                  <img src="../images/circulito.png" alt="Pagina de Tiktok" class="circulo">
+              </div>
+              <div class="col-md-2 mb-2"> 
+                <img src="../images/flores.png" alt="Pagina de Tiktok" class="circulo">
+            </div>
               <div class="row">
-                <div class="col"> 
-                  <h2>ASISTENCIA</h2> 
+                <div class="col-md-4 mb-3"> 
+                  <h2>ASISTENCIA</h2>
+                    <div class="col"> 
+                      <a href="devoluciones.html" >DEVOLUCIONES</a> 
+                    </div>
+                    <div class="col"> 
+                      <a href="dudas.html" >DUDAS</a> 
+                    </div>
+                    <div class="col">
+                      <a href="contacto.html">CONTACTO</a>
+                    </div>
+                </div> 
+                <div class="col-md-4 mb-3"> 
+                  <h2>ACERCA DE NOSOTROS</h2> 
+                    <div class="col"> 
+                      <a href="sucursales.html" >SUCURSALES</a> 
+                    </div>
+                    <div class="col"> 
+                      <a href="nosotros.html" >NOSOTROS</a> 
+                    </div>
+                    <div class="col">
+                      <span class="spanf">© 2024 Rosse Argentina</span>
+                    </div>
                 </div>  
-              </div>
-              <div class="row"> 
-                <div class="col">
-                  <a href="contacto.html" >Contacto</a>
-                </div>
-              </div>
-              <div class="row"> 
-                <div class="col">
-                  <a href="nosotros.html">Nosotros</a>
-                </div>
-              </div>
-              
+                <div class="col-md-4 mb-3"> 
+                  <h2>PRODUCTOS</h2>
+                    <div class="col"> 
+                      <a href="remeras.html" >REMERAS</a> 
+                    </div>
+                    <div class="col"> 
+                      <a href="pantalones.html" >PANTALONES</a> 
+                    </div>
+                    <div class="col">
+                      <a href="hoodies.html">HOODIES</a>
+                    </div>
+                    <div class="col">
+                      <a href="calzados.html">CALZADOS</a>
+                    </div>
+                </div>   
+              </div>          
           </div>
       </div>      
     </footer>
