--- a/html/hoodies.html
+++ b/html/hoodies.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon"  href="../images/logo.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -20,7 +21,7 @@
                 <ul class="list-unstyled d-flex m-0">
                     <li><a href="../index.html" class="text-light text-decoration-none">Inicio</a></li>
                     <li><a href="remeras.html" class="text-light text-decoration-none">Remeras</a></li>
-                    <li><a href="hoodies.html" class="text-light text-decoration-none">Pantalones</a></li>
+                    <li><a href="pantalones.html" class="text-light text-decoration-none">Pantalones</a></li>
                     <li><a href="calzados.html" class="text-light text-decoration-none">Calzados</a></li>
                     <li> <input type="text" placeholder="Buscar" class="input" class="text-light text-decoration-none"> </li>
                 </ul>
@@ -29,71 +30,139 @@
     </header>  
 
     <main class="py-5">
-        <section> 
-            <div class="container text-center">
-                <div class="row" > 
-                    <div class="col"> 
-                        <h2 class="section_h2">HOODIES</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 mb-3">
-                        <img src="../images/hood1.jpg" alt="Hoodie cream">
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <img src="../images/hood2.jpg" alt="Hoodie negro-gris">
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <img src="../images/hood3.png" alt="Hoodie salmon">
-                    </div>
-                    <div class="col-md-3 mb-3"> 
-                        <img src="../images/hoodie verde_.jpg" alt="Hoodie verde_">
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container text-center">
-            <div class="row" > 
-                <div class="col"> 
-                    <h2>NUESTRAS REDES</h2>
-                </div>
+        <section>
+          <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <h2 class="section_h2">HOODIES</h2>
+              </div>
             </div>
             <div class="row">
-                <div class="col-md-4 mb-3">
-                    <a href="https://www.instagram.com/rosse.in/"target="_blank">
-                        <img src="../images/ig.png" alt="Pagina de instagram" class="logo_ig">
-                    </a>
+              <!-- Hoodie 1 -->
+              <div class="col-md-3 mb-3 d-flex">
+                <div class="card text-bg-dark w-100 section-card">
+                  <div class="image-container">
+                    <img src="../images/hood1.jpg" class="card-img-top" alt="Hoodie cream">
+                  </div>
+                  <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Hoodie cream <span class="badge text-bg-success">Disponible</span></h5>
+                    <a href="hoodies.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
+                  </div>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <a href="https://www.facebook.com/profile.php?id=61557798010156"target="_blank">
-                        <img src="../images/face.png" alt="Pagina de Facebook" class="logo_face">
-                    </a>  
+              </div>
+              <!-- Hoodie 2 -->
+              <div class="col-md-3 mb-3 d-flex">
+                <div class="card text-bg-dark w-100 section-card">
+                  <div class="image-container">
+                    <img src="../images/hood2.jpg" class="card-img-top" alt="Hoodie negro-gris">
+                  </div>
+                  <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Hoodie negro-gris <span class="badge text-bg-success">Disponible</span></h5>
+                    <a href="hoodies.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
+                  </div>
                 </div>
-                <div class="col-md-4 mb-3"> 
-                    <a href="https://www.tiktok.com/es" target="_blank">
-                        <img src="../images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
-                    </a>
+              </div>
+              <!-- Hoodie 3 -->
+              <div class="col-md-3 mb-3 d-flex">
+                <div class="card text-bg-dark w-100 section-card">
+                  <div class="image-container">
+                    <img src="../images/hood3.png" class="card-img-top" alt="Hoodie salmon">
+                  </div>
+                  <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Hoodie salmon <span class="badge text-bg-success">Disponible</span></h5>
+                    <a href="hoodies.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
+                  </div>
                 </div>
+              </div>
+              <!-- Hoodie 4 -->
+              <div class="col-md-3 mb-3 d-flex">
+                <div class="card text-bg-dark w-100 section-card">
+                  <div class="image-container">
+                    <img src="../images/hoodie verde_.jpg" class="card-img-top" alt="Hoodie verde_">
+                  </div>
+                  <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Hoodie verde_ <span class="badge text-bg-success">Disponible</span></h5>
+                    <a href="hoodies.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <footer>
+        <div class="container text-center">
+          <div class="row" > 
+            <div class="col"> 
+            <h2>🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸  🌸</h2>
+            </div>
+          </div>
+            <div class="row">
+                <div class="col-md-1 mb-2">
+                  <a href="https://www.instagram.com/rosse.in/"target="_blank">
+                    <img src="../images/ig.png" alt="Pagina de instagram" class="logo_ig">
+                  </a>
+                </div>
+                <div class="col-md-1 mb-2">
+                  <a href="https://www.facebook.com/profile.php?id=61557798010156"target="_blank">
+                    <img src="../images/face.png" alt="Pagina de Facebook" class="logo_face">
+                  </a>  
+                </div>
+                <div class="col-md-1 mb-2"> 
+                  <a href="https://www.tiktok.com/es" target="_blank">
+                    <img src="../images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
+                  </a>
+                </div>
+                <div class="col-md-6 mb-2"> 
+                    <img src="../images/circulito.png" alt="Pagina de Tiktok" class="circulo">
+                </div>
+                <div class="col-md-2 mb-2"> 
+                  <img src="../images/flores.png" alt="Pagina de Tiktok" class="circulo">
+              </div>
                 <div class="row">
-                    <div class="col"> 
-                        <h2>ASISTENCIA</h2> 
-                    </div>  
-                </div>
-                <div class="row"> 
-                    <div class="col">
-                        <a href="contacto.html" >Contacto</a>
-                    </div>
-                </div>
-                <div class="row"> 
-                    <div class="col">
-                        <a href="nosotros.html">Nosotros</a>
-                    </div>
-                </div>
+                  <div class="col-md-4 mb-3"> 
+                    <h2>ASISTENCIA</h2>
+                      <div class="col"> 
+                        <a href="devoluciones.html" >DEVOLUCIONES</a> 
+                      </div>
+                      <div class="col"> 
+                        <a href="dudas.html" >DUDAS</a> 
+                      </div>
+                      <div class="col">
+                        <a href="contacto.html">CONTACTO</a>
+                      </div>
+                  </div> 
+                  <div class="col-md-4 mb-3"> 
+                    <h2>ACERCA DE NOSOTROS</h2> 
+                      <div class="col"> 
+                        <a href="sucursales.html" >SUCURSALES</a> 
+                      </div>
+                      <div class="col"> 
+                        <a href="nosotros.html" >NOSOTROS</a> 
+                      </div>
+                      <div class="col">
+                        <span class="spanf">© 2024 Rosse Argentina</span>
+                      </div>
+                  </div>  
+                  <div class="col-md-4 mb-3"> 
+                    <h2>PRODUCTOS</h2>
+                      <div class="col"> 
+                        <a href="remeras.html" >REMERAS</a> 
+                      </div>
+                      <div class="col"> 
+                        <a href="pantalones.html" >PANTALONES</a> 
+                      </div>
+                      <div class="col">
+                        <a href="hoodies.html">HOODIES</a>
+                      </div>
+                      <div class="col">
+                        <a href="calzados.html">CALZADOS</a>
+                      </div>
+                  </div>   
+                </div>          
             </div>
         </div>      
-    </footer>
+      </footer>
 </body>
 </html>
