arreglo imgs footer

--- a/index.html
+++ b/index.html
@@ -166,24 +166,24 @@
             <div class="row">
                 <div class="col-md-1 mb-2">
                   <a href="https://www.instagram.com/rosse.in/"target="_blank">
-                    <img src="../images/ig.png" alt="Pagina de instagram" class="logo_ig">
+                    <img src="/images/ig.png" alt="Pagina de instagram" class="logo_ig">
                   </a>
                 </div>
                 <div class="col-md-1 mb-2">
                   <a href="https://www.facebook.com/profile.php?id=61557798010156"target="_blank">
-                    <img src="../images/face.png" alt="Pagina de Facebook" class="logo_face">
+                    <img src="/images/face.png" alt="Pagina de Facebook" class="logo_face">
                   </a>  
                 </div>
                 <div class="col-md-1 mb-2"> 
                   <a href="https://www.tiktok.com/es" target="_blank">
-                    <img src="../images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
+                    <img src="/images/tiktok.png" alt="Pagina de Tiktok" class="logo_tk">
                   </a>
                 </div>
                 <div class="col-md-6 mb-2"> 
-                    <img src="../images/circulito.png" alt="Pagina de Tiktok" class="circulo">
+                    <img src="/images/circulito.png" alt="Pagina de Tiktok" class="circulo">
                 </div>
                 <div class="col-md-2 mb-2"> 
-                  <img src="../images/flores.png" alt="Pagina de Tiktok" class="circulo">
+                  <img src="/images/flores.png" alt="Pagina de Tiktok" class="circulo">
               </div>
                 <div class="row">
                   <div class="col-md-4 mb-3"> 
