--- a/html/devoluciones.html
+++ b/html/devoluciones.html
@@ -12,22 +12,27 @@
     <title>Devoluciones</title>
 </head>
 <body>
-    <header class="bg-dark py-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <a href="../index.html" class="text-decoration-none text-light d-flex align-items-center">
-                <img src="../images/logo.png" alt="Logo de la tienda" class="Logo me-2">
-            </a>
-            <nav>
-                <ul class="list-unstyled d-flex m-0">
-                    <li><a href="../index.html" class="text-light text-decoration-none">Inicio</a></li>
-                    <li><a href="pantalones.html" class="text-light text-decoration-none">Pantalones</a></li>
-                    <li><a href="hoodies.html" class="text-light text-decoration-none">Hoodies</a></li>
-                    <li><a href="calzados.html" class="text-light text-decoration-none">Calzados</a></li>
-                    <li> <input type="text" placeholder="Buscar" class="input" class="text-light text-decoration-none"> </li>
-                </ul>
-            </nav>
+  <header class="bg-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../images/logo.png" alt="Logo" style="height: 40px;"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="remeras.html">REMERAS</a>
+            <a class="nav-link" href="pantalones.html">PANTALONES</a>
+            <a class="nav-link" href="hoodies.html">HOODIES</a>
+            <a class="nav-link" href="calzados.html">CALZADOS</a>
+          </div>
+          <div class="search-input">
+            <input type="text" class="form-control" placeholder="Buscar">
+          </div>
         </div>
-    </header>
+      </div>
+    </nav>
+  </header>
 
 <main>
     <section>
@@ -108,5 +113,16 @@
         </div>
     </div>      
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        // Inicializar AOS
+        document.addEventListener('DOMContentLoaded', function() {
+            AOS.init();
+        });
+    </script>
 </body>
 </html>
