intento de arreglo

--- a/index.html
+++ b/index.html
@@ -194,22 +194,22 @@
                   <div class="col-md-4 mb-3"> 
                     <h2>ASISTENCIA</h2>
                       <div class="col"> 
-                        <a href="/html/devoluciones.html" >DEVOLUCIONES</a> 
+                        <a href="html/devoluciones.html" >DEVOLUCIONES</a> 
                       </div>
                       <div class="col"> 
-                        <a href="/html/dudas.html" >DUDAS</a> 
+                        <a href="html/dudas.html" >DUDAS</a> 
                       </div>
                       <div class="col">
-                        <a href="/html/contacto.html">CONTACTO</a>
+                        <a href="html/contacto.html">CONTACTO</a>
                       </div>
                   </div> 
                   <div class="col-md-4 mb-3"> 
                     <h2>ACERCA DE NOSOTROS</h2> 
                       <div class="col"> 
-                        <a href="/html/sucursales.html" >SUCURSALES</a> 
+                        <a href="html/sucursales.html" >SUCURSALES</a> 
                       </div>
                       <div class="col"> 
-                        <a href="/html/nosotros.html" >NOSOTROS</a> 
+                        <a href="html/nosotros.html" >NOSOTROS</a> 
                       </div>
                       <div class="col">
                         <span class="spanf">© 2024 Rosse Argentina</span>
@@ -218,16 +218,16 @@
                   <div class="col-md-4 mb-3"> 
                     <h2>PRODUCTOS</h2>
                       <div class="col"> 
-                        <a href="/html/remeras.html" >REMERAS</a> 
+                        <a href="html/remeras.html" >REMERAS</a> 
                       </div>
                       <div class="col"> 
-                        <a href="/html/pantalones.html" >PANTALONES</a> 
+                        <a href="html/pantalones.html" >PANTALONES</a> 
                       </div>
                       <div class="col">
-                        <a href="/html/hoodies.html">HOODIES</a>
+                        <a href="html/hoodies.html">HOODIES</a>
                       </div>
                       <div class="col">
-                        <a href="/html/calzados.html">CALZADOS</a>
+                        <a href="html/calzados.html">CALZADOS</a>
                       </div>
                   </div>   
                 </div>          
