arreglo img pantalon

--- a/html/pantalones.html
+++ b/html/pantalones.html
@@ -83,10 +83,10 @@
               <div class="col-md-3 mb-3 d-flex">
                 <div class="card text-bg-dark w-100 section-card">
                   <div class="image-container">
-                    <img src="../images/_pantalon jean baggy negro kaza.png" class="card-img-top" alt="Pantalon jean baggy negro kaza">
+                    <img src="../images/JEAN BAGGY HADOUKEN.png" class="card-img-top" alt=" jean baggy hadouken">
                   </div>
                   <div class="card-body d-flex flex-column">
-                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Pantalon jean baggy negro kaza <span class="badge text-bg-success">Disponible</span></h5>
+                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;"> Jean baggy hadouken <span class="badge text-bg-success">Disponible</span></h5>
                     <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
                   </div>
                 </div>
