--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                       <div class="card text-bg-dark w-100 section-card">
                           <div class="image-container">
-                              <img src="images/hood2.jpg" class="card-img-top" alt="DC X Black sabbhath">
+                              <img src="images/hood2.jpg" class="card-img-top" alt="Hoodie negro y gris">
                           </div>
                           <div class="card-body d-flex flex-column">
                               <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Hoodies</h5>
@@ -120,7 +120,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                     <div class="card text-bg-dark w-100 section-card">
                       <div class="image-container">
-                          <img src="images/vans VR3 february.jpg" class="card-img-top" alt="DC X Black sabbhath">
+                          <img src="images/vans VR3 february.jpg" class="card-img-top" alt="Vans VR3">
                       </div>
                       <div class="card-body d-flex flex-column">
                           <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Calzados</h5>
@@ -133,7 +133,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                     <div class="card text-bg-dark w-100 section-card">
                       <div class="image-container">
-                          <img src="images/remera zeus.jpg" class="card-img-top" alt="DC X Black sabbhath">
+                          <img src="images/remera zeus.jpg" class="card-img-top" alt="Remera oversize zeus">
                       </div>
                       <div class="card-body d-flex flex-column">
                           <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Remeritas</h5>
@@ -146,7 +146,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                     <div class="card text-bg-dark w-100 section-card">
                       <div class="image-container">
-                          <img src="images/_pantalon jean baggy negro kaza.png" class="card-img-top" alt="DC X Black sabbhath">
+                          <img src="images/JEAN BAGGY HADOUKEN.png" class="card-img-top" alt="jean baggy hadouken">
                       </div>
                       <div class="card-body d-flex flex-column">
                           <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Pantalones</h5>
