--- a/html/devoluciones.html
+++ b/html/devoluciones.html
@@ -36,7 +36,8 @@
 
 <main>
     <section>
-        <h2 class="section_h2">En proceso...</h2>
+        <h1 class="section_h2">Devoluciones</h1>
+        <p>Las devoluciones se hacen siempre y cuando el producto esté en condiciones y no hayan transcurrido más de 10 días desde su entrega</p>
     </section>
 </main>
 
