--- a/html/dudas.html
+++ b/html/dudas.html
@@ -35,8 +35,21 @@
   </header>
 
 <main>
-    <section>
-        <h2 class="section_h2">En proceso...</h2>
+      <section>
+        <div class="container text-center">
+            <div class="row" > 
+                <div class="col"> 
+                  <h1 class="section_h2">DUDAS</h1>
+                </div>
+            </div>
+        </div>
+        <ul> 
+          <li><p></p></li>
+          <li><p>Demora en las entregas: Envíos dentro del País (5 días), Envíos al exterior (10 días)</p></li>
+          <li><p></p></li>
+          <li><p>Atención al cliente: Estamos a disposición las 24 horas del día para responder mensajes</p></li>
+          <li><p></p></li>
+        </ul>
     </section>
 </main>
 
