--- a/html/pantalones.html
+++ b/html/pantalones.html
@@ -8,6 +8,7 @@
     <link rel="icon"  href="../images/logo.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Pantalones</title>
 </head>
@@ -34,67 +35,118 @@
     </nav>
   </header>
     
-    <main class="py-5">
-        <section>
-          <div class="container text-center">
-            <div class="row">
-              <div class="col">
-                <h2 class="section_h2">PANTALONES</h2>
-              </div>
-            </div>
-            <div class="row">
-              <!-- Pantalón 1 -->
-              <div class="col-md-3 mb-3 d-flex">
-                <div class="card text-bg-dark w-100 section-card">
-                  <div class="image-container">
-                    <img src="../images/pant1.jpg" class="card-img-top" alt="Pantalon Baggy DCwash">
-                  </div>
-                  <div class="card-body d-flex flex-column">
-                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Pantalon Baggy DCwash <span class="badge text-bg-success">Disponible</span></h5>
-                    <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
-                  </div>
-                </div>
-              </div>
-              <!-- Pantalón 2 -->
-              <div class="col-md-3 mb-3 d-flex">
-                <div class="card text-bg-dark w-100 section-card">
-                  <div class="image-container">
-                    <img src="../images/pant2.png" class="card-img-top" alt="Pantalon Baggy cream">
-                  </div>
-                  <div class="card-body d-flex flex-column">
-                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Pantalon Baggy cream <span class="badge text-bg-success">Disponible</span></h5>
-                    <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
-                  </div>
-                </div>
-              </div>
-              <!-- Pantalón 3 -->
-              <div class="col-md-3 mb-3 d-flex">
-                <div class="card text-bg-dark w-100 section-card">
-                  <div class="image-container">
-                    <img src="../images/pant3.jpg" class="card-img-top" alt="Pantalon vintage cargo jeans">
-                  </div>
-                  <div class="card-body d-flex flex-column">
-                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Pantalon vintage cargo jeans <span class="badge text-bg-success">Disponible</span></h5>
-                    <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
-                  </div>
-                </div>
-              </div>
-              <!-- Pantalón 4 -->
-              <div class="col-md-3 mb-3 d-flex">
-                <div class="card text-bg-dark w-100 section-card">
-                  <div class="image-container">
-                    <img src="../images/JEAN BAGGY HADOUKEN.png" class="card-img-top" alt=" jean baggy hadouken">
-                  </div>
-                  <div class="card-body d-flex flex-column">
-                    <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;"> Jean baggy hadouken <span class="badge text-bg-success">Disponible</span></h5>
-                    <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
-                  </div>
-                </div>
-              </div>
+  <main class="py-5">
+    <section>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col">
+              <h1 class="section_h2">PANTALONES</h1>
             </div>
           </div>
-        </section>
-      </main>
+          <div class="row">
+                <!-- Tarjeta 1 - Remeras -->
+                <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
+                    <div class="card text-bg-dark w-100 section-card">
+                        <div class="image-container">
+                            <img src="../images/JEAN BAGGY HADOUKEN.png" class="card-img-top" alt="Jean Baggy hadouken">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Jean Baggy hadouken</h5>
+                            <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta 2 - Pantalones -->
+                <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
+                    <div class="card text-bg-dark w-100 section-card">
+                        <div class="image-container">
+                            <img src="../images/cargo recto beige.png" class="card-img-top" alt="Cargo recto beige">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Cargo recto beige</h5>
+                            <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta 3 - Hoodies -->
+                <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
+                    <div class="card text-bg-dark w-100 section-card">
+                        <div class="image-container">
+                            <img src="../images/cargo baggy marron.png" class="card-img-top" alt="Cargo baggy marron">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Cargo baggy marron</h5>
+                            <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta 4 - Calzados -->
+                <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
+                    <div class="card text-bg-dark w-100 section-card">
+                        <div class="image-container">
+                            <img src="../images/cargo baggy blanco.png" class="card-img-top" alt="Cargo baggy blanco">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Cargo baggy blanco</h5>
+                            <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Segunda fila de tarjetas replicada -->
+            <div class="row">
+                <!-- Tarjeta 1 - Remeras (Replica) -->
+                <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
+                    <div class="card text-bg-dark w-100 section-card">
+                        <div class="image-container">
+                            <img src="../images/cargo Pampero.png" class="card-img-top" alt="Cargo Pampero">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Cargo Pampero</h5>
+                            <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta 2 - Pantalones (Replica) -->
+                <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
+                    <div class="card text-bg-dark w-100 section-card">
+                        <div class="image-container">
+                            <img src="../images/pant3.png" class="card-img-top" alt="Jean baggy">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Jean baggy</h5>
+                            <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta 3 - Hoodies (Replica) -->
+                <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
+                    <div class="card text-bg-dark w-100 section-card">
+                        <div class="image-container">
+                            <img src="../images/pant2.png" class="card-img-top" alt="Cargo recto">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Cargo recto</h5>
+                            <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        </div>
+                    </div>
+                </div>
+
+                <!-- Tarjeta 4 - Calzados (Replica) -->
+                <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
+                    <div class="card text-bg-dark w-100 section-card">
+                        <div class="image-container">
+                            <img src="../images/pant1.png" class="card-img-top" alt="Cargo recto negro">
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Cargo recto negro</h5>
+                            <a href="pantalones.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 
       <footer>
         <div class="container text-center">
