--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -36,7 +36,19 @@
 
 <main>
     <section>
-        <h2 class="section_h2">En proceso...</h2>
+        <div class="container text-center">
+            <div class="row" > 
+                <div class="col"> 
+                  <h1 class="section_h2">SUCURSALES</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+        <ul>
+          <li><p>sucursal 1: Costanera</p></li>
+          <li><p>sucursal 2: Av. Tambor de Tacuarí</p></li>
+          <li><p>sucursal 3: Av. Junin</p></li>
+        </ul>
     </section>
 </main>
 
