--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="bg-dark py-3">
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo" style="height: 40px;"></a>
+          <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,7 +34,7 @@
           </div>
         </div>
       </nav>
-    </header>
+    </header>    
   
     <!--Seccion de la pagina de inicio con imagenes de las prendas y sus respectivos enlaces-->
     <main class="py-5">
@@ -42,7 +42,7 @@
           <div class="container text-center">
             <div class="row">
                 <div class="col" style="box-shadow: 0px 0px 35px 30px rgb(0, 0, 0); text-shadow: 0 0 5px #fff, 0 0 10px rgba(248, 177, 177, 0.979), 0 0 20px rgba(250, 107, 107, 0.979), 0 0 30px rgba(250, 107, 107, 0.979), 0 0 40px rgba(250, 107, 107, 0.979), 0 0 50px rgba(250, 107, 107, 0.979), 0 0 60px rgba(250, 107, 107, 0.979); ">
-                  <h2 class="section_h2">ROS$E</h2>
+                  <h1 class="section_h2">ROS$E</h1>
                 </div>
               </div>
               <div class="row">
@@ -50,7 +50,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                       <div class="card text-bg-dark w-100 section-card">
                           <div class="image-container">
-                              <img src="images/reme1.png" class="card-img-top" alt="Remeritas">
+                              <img src="images/reme3.png" class="card-img-top" alt="Remeritas">
                           </div>
                           <div class="card-body d-flex flex-column">
                               <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Remeritas</h5>
@@ -63,7 +63,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                       <div class="card text-bg-dark w-100 section-card">
                           <div class="image-container">
-                              <img src="images/pant1.jpg" class="card-img-top" alt="Pantalon Baggy DCwash">
+                              <img src="images/cargo baggy marron.png" class="card-img-top" alt="Pantalon Baggy DCwash">
                           </div>
                           <div class="card-body d-flex flex-column">
                               <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Pantalones</h5>
@@ -76,7 +76,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                       <div class="card text-bg-dark w-100 section-card">
                           <div class="image-container">
-                              <img src="images/hood1.jpg" class="card-img-top" alt="Hoodie cream">
+                              <img src="images/hoodie gris claro.png" class="card-img-top" alt="Hoodie cream">
                           </div>
                           <div class="card-body d-flex flex-column">
                               <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Hoodies</h5>
@@ -120,7 +120,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                     <div class="card text-bg-dark w-100 section-card">
                       <div class="image-container">
-                          <img src="images/vans VR3 february.jpg" class="card-img-top" alt="Vans VR3">
+                          <img src="images/vans cobra kai.png" class="card-img-top" alt="Vans VR3">
                       </div>
                       <div class="card-body d-flex flex-column">
                           <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Calzados</h5>
@@ -133,7 +133,7 @@
                   <div class="col-md-3 col-sm-6 mb-3 d-flex" data-aos="zoom-in">
                     <div class="card text-bg-dark w-100 section-card">
                       <div class="image-container">
-                          <img src="images/remera zeus.jpg" class="card-img-top" alt="Remera oversize zeus">
+                          <img src="images/remera zeus.png" class="card-img-top" alt="Remera oversize zeus">
                       </div>
                       <div class="card-body d-flex flex-column">
                           <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Remeritas</h5>
