--- a/html/contacto.html
+++ b/html/contacto.html
@@ -39,23 +39,16 @@
         <div class="container text-center">
             <div class="row" > 
                 <div class="col"> 
-                    <h2 class="section_h2">Contactanos !</h2>
+                    <h2>Contactanos !</h2>
                 </div>
             </div>
-            <div class="row" > 
-                <div class="col"> 
-                    <p>Correo: <a href="https://mail.google.com/mail/u/6/#inbox?compose=new">rosseindumentaria55@gmail.com</a>
+                    <p style="font-size: 3rem;">CORREO:<a href="https://mail.google.com/mail/u/6/#inbox?compose=new" style="font-size: 3rem;">rosseindumentaria55@gmail.com</a>
                     </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <p>
+
+                    <p style="font-size: 3.2rem; ">
                         WhatsApp: ------------
                     </p>
-                </div>
-            </div>
-        </div>
+              
     </section>
 </main>
 
