--- a/html/pantalones.html
+++ b/html/pantalones.html
@@ -40,7 +40,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col">
-              <h1 class="section_h2">PANTALONES</h1>
+              <h1>PANTALONES</h1>
             </div>
           </div>
           <div class="row">
