--- a/html/remeras.html
+++ b/html/remeras.html
@@ -41,7 +41,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col">
-              <h1 class="section_h2">REMERAS</h1>
+              <h1>REMERAS</h1>
             </div>
           </div>
           <div class="row">
@@ -53,7 +53,8 @@
                         </div>
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title text-center flex-grow-1" style="font-size: 2.5rem;">Remera oversize negra tussy</h5>
-                            <a href="remeras.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        </div>
+                            <a href="remeras.html" class="btn custom-btn d-block mt-auto" style="font-size: 3rem;">Comprar</a>                        
+                          </div>
                     </div>
                 </div>
 
