--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="container text-center">
             <div class="row">
                 <div class="col" style="box-shadow: 0px 0px 35px 30px rgb(0, 0, 0); text-shadow: 0 0 5px #fff, 0 0 10px rgba(248, 177, 177, 0.979), 0 0 20px rgba(250, 107, 107, 0.979), 0 0 30px rgba(250, 107, 107, 0.979), 0 0 40px rgba(250, 107, 107, 0.979), 0 0 50px rgba(250, 107, 107, 0.979), 0 0 60px rgba(250, 107, 107, 0.979); ">
-                  <h1 class="section_h2">ROS$E</h1>
+                  <h1>ROS$E</h1>
                 </div>
               </div>
               <div class="row">
@@ -158,6 +158,12 @@
               </div>
 
           </div>
+          <div class="container text-center" style="color: none !important;">
+            <div class="row" style="color: none !important;">
+              <div class="col circuloM2">
+                 <img src="images/circulo con flores.png" alt="circulo con flores">
+              </div>
+            </div>
       </section>
   </main>  
       
