--- a/html/calzados.html
+++ b/html/calzados.html
@@ -40,7 +40,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col">
-              <h1 class="section_h2">HOODIES</h1>
+              <h1>CALZADOS</h1>
             </div>
           </div>
           <div class="row">
