--- a/html/devoluciones.html
+++ b/html/devoluciones.html
@@ -35,10 +35,20 @@
   </header>
 
 <main>
-    <section>
-        <h1 class="section_h2">Devoluciones</h1>
-        <p>Las devoluciones se hacen siempre y cuando el producto esté en condiciones y no hayan transcurrido más de 10 días desde su entrega</p>
-    </section>
+  <section>
+    <div class="container text-center">
+        <div class="row" > 
+            <div class="col"> 
+              <h1>DEVOLUCIONES</h1>
+            </div>
+        </div>
+    </div>
+    <ul> 
+      <li><p></p></li>
+      <li><p>Las devoluciones se hacen siempre y cuando el producto esté en condiciones y no hayan transcurrido más de 10 días desde su entrega.</p></li>
+      <li><p></p></li>
+    </ul>
+</section>
 </main>
 
 <footer>
