--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -39,7 +39,7 @@
         <div class="container text-center">
             <div class="row" > 
                 <div class="col"> 
-                  <h1 class="section_h2">SUCURSALES</h1>
+                  <h1>SUCURSALES</h1>
                 </div>
             </div>
         </div>
