--- a/html/contacto.html
+++ b/html/contacto.html
@@ -35,21 +35,23 @@
   </header>
     
 <main>
-    <section>
-        <div class="container text-center">
-            <div class="row" > 
-                <div class="col"> 
-                    <h2>Contactanos !</h2>
-                </div>
+  <section>
+    <div class="container text-center">
+        <div class="row" > 
+            <div class="col"> 
+              <h1>CONTACTANOS</h1>
             </div>
-                    <p style="font-size: 3rem;">CORREO:<a href="https://mail.google.com/mail/u/6/#inbox?compose=new" style="font-size: 3rem;">rosseindumentaria55@gmail.com</a>
-                    </p>
-
-                    <p style="font-size: 3.2rem; ">
-                        WhatsApp: ------------
-                    </p>
-              
-    </section>
+        </div>
+    </div>
+    <ul> 
+      <li><p></p></li>
+      <li><p style="font-size: 3rem;">CORREO:<a href="https://mail.google.com/mail/u/6/#inbox?compose=new" style="font-size: 3rem;">rosseindumentaria55@gmail.com</a>
+      </p></li>
+      <li><p></p></li>
+      <li><p style="font-size: 3.2rem; ">WhatsApp: ------------</p></li>
+      <li><p></p></li>
+    </ul>
+</section>
 </main>
 
 <footer>
