--- a/html/contacto.html
+++ b/html/contacto.html
@@ -45,10 +45,10 @@
     </div>
     <ul> 
       <li><p></p></li>
-      <li><p style="font-size: 3rem;">CORREO:<a href="https://mail.google.com/mail/u/6/#inbox?compose=new" style="font-size: 3rem;">rosseindumentaria55@gmail.com</a>
+      <li><p>CORREO:<a href="https://mail.google.com/mail/u/6/#inbox?compose=new" style="font-size: 3rem;">rosseindumentaria55@gmail.com</a>
       </p></li>
       <li><p></p></li>
-      <li><p style="font-size: 3.2rem; ">WhatsApp: ------------</p></li>
+      <li><p>WhatsApp: ------------</p></li>
       <li><p></p></li>
     </ul>
 </section>
