--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
 
               </div>
-              <div class="row" style="color: none !important;">
+              <div class="row">
                 <div class="col circuloM2">
                   <img src="images/circulo con flores.png" alt="circulo con flores">
                 </div>
