a ver si funciona ya

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 
               </div>
               <div class="row">
-                <div class="col circuloM2">
-                  <img src="images/circulo con flores.png" alt="circulo con flores">
+                <div class="col-12 circuloM2">
+                    <img src="images/circulo con flores.png" class="img-fluid" alt="circulo con flores">
                 </div>
-              </div>
+            </div>
           </div>
       </section>
   </main>  
