proyecto finalizado. fue un gusto ;)

--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
 <title>Rosse</title>
+
 <meta name="title" content="Rosse" />
-<meta name="description" content="" />
+<meta name="description" content="La mejor indumentaria unisex de Argentina la encontrás en nuestra tienda Rosse." />
+<meta name="keywords" content="indumentaria, unisex, remeras, remeritas, pantalones, hoodies, calzados, Argentina">
+<meta name="author" content="Enzo Centurión">
+<meta property="og:image" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/images/logo.png"/>
 
-<!-- Open Graph / Facebook -->
+<!-- Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/html/remeras.html" />
+<meta property="og:url" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/" />
 <meta property="og:title" content="Rosse" />
-<meta property="og:description" content="" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
-
+<meta property="og:description" content="La mejor indumentaria unisex de Argentina la encontrás en nuestra tienda Rosse." />
+<meta property="og:image" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/images/logo.png"/>
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/html/remeras.html" />
+<meta property="twitter:url" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/" />
 <meta property="twitter:title" content="Rosse" />
-<meta property="twitter:description" content="" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:description" content="La mejor indumentaria unisex de Argentina la encontrás en nuestra tienda Rosse." />
+<meta property="og:image" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/images/logo.png"/>
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
