--- a/html/devoluciones.html
+++ b/html/devoluciones.html
@@ -10,6 +10,24 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Devoluciones</title>
+    <meta name="title" content="Rosse" />
+    <meta name="description" content="La mejor indumentaria unisex de Argentina la encontrás en nuestra tienda Rosse." />
+    <meta name="keywords" content="indumentaria, unisex, remeras, remeritas, pantalones, hoodies, calzados, Argentina">
+    <meta name="author" content="Enzo Centurión">
+    <meta property="og:image" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/images/logo.png"/>
+    
+    <!-- Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/" />
+    <meta property="og:title" content="Rosse" />
+    <meta property="og:description" content="La mejor indumentaria unisex de Argentina la encontrás en nuestra tienda Rosse." />
+    <meta property="og:image" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/images/logo.png"/>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/" />
+    <meta property="twitter:title" content="Rosse" />
+    <meta property="twitter:description" content="La mejor indumentaria unisex de Argentina la encontrás en nuestra tienda Rosse." />
+    <meta property="og:image" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/images/logo.png"/>
 </head>
 <body>
   <header class="bg-dark py-3">
